--- a/web/src/main/resources/templates/fragment/redactor/workers.html
+++ b/web/src/main/resources/templates/fragment/redactor/workers.html
@@ -11,7 +11,7 @@
                  onclick="goBack()">
         </div>
         <div class="d-flex flex-column col-11">
-            <p class="text-center p-2">Выбери Специалиста</p>
+            <p class="text-center p-2" th:text="#{masters}"></p>
         </div>
     </div>
 
@@ -22,7 +22,7 @@
                      width="40">
             </div>
             <div class="worker_info col-10">
-                <p class="text-center p-2" >Добавить нового работника</p>
+                <p class="text-center p-2" th:text="#{master.create}"></p>
             </div>
         </div>
     </div>
