--- a/web/src/main/resources/templates/fragment/user/utilities.html
+++ b/web/src/main/resources/templates/fragment/user/utilities.html
@@ -10,7 +10,7 @@
              onclick="goBack()">
     </div>
     <div class="d-flex flex-column col-11">
-        <p class="org_name text-center p-2">Услуги</p>
+        <p class="org_name text-center p-2" th:text="#{services}">Services</p>
     </div>
 </div>
 
