--- a/web/src/main/resources/templates/fragment/user/workers.html
+++ b/web/src/main/resources/templates/fragment/user/workers.html
@@ -11,7 +11,7 @@
                  onclick="goBack()">
         </div>
         <div class="d-flex flex-column col-11">
-            <p class="text-center p-2">Выбери Специалиста</p>
+            <p class="text-center p-2" th:text="#{masters}"></p>
         </div>
     </div>
 
