--- a/web/src/main/resources/templates/fragment/redactor/utilities.html
+++ b/web/src/main/resources/templates/fragment/redactor/utilities.html
@@ -10,7 +10,7 @@
              onclick="goBack()">
     </div>
     <div class="d-flex flex-column col-11">
-        <p class="org_name text-center p-2">Услуги</p>
+        <p class="org_name text-center p-2" th:text="#{services}"></p>
     </div>
 </div>
 
@@ -21,7 +21,7 @@
                  width="40">
         </div>
         <div class="worker_info col-10">
-            <p class="text-center p-2" >Добавить новую услугу</p>
+            <p class="text-center p-2" th:text="#{service.create}"></p>
         </div>
     </div>
 </div>
