--- a/web/src/main/resources/templates/home/home.html
+++ b/web/src/main/resources/templates/home/home.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
+    <title th:text="#{application}"></title>
 
     <link
             href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css"
@@ -11,7 +12,6 @@
             crossorigin="anonymous"
     />
     <link th:href="@{/css/profiles.css}" rel="stylesheet"/>
-    <!--    <link th:href="@{/css/manageUtilitiesOfWorker.css}" rel="stylesheet"/>-->
     <link th:href="@{/css/main.css}" rel="stylesheet"/>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
