--- a/web/src/main/resources/templates/profile/manageProfile.html
+++ b/web/src/main/resources/templates/profile/manageProfile.html
@@ -4,6 +4,8 @@
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
 
+    <title th:text="#{profiles.change}"></title>
+
     <link
             href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css"
             rel="stylesheet"
@@ -24,7 +26,7 @@
              onclick="goBack()">
     </div>
     <div class="d-flex flex-column col-11">
-        <p class="text-center p-2" th:text="'Профиль #' + ${profile.id}"></p>
+        <p class="text-center p-2" th:text="|#{profile} №${profile.id}|"></p>
     </div>
     <div class="option d-flex container-fluid px-0 my-3">
         <div class="input-group mb-3">
