--- a/web/src/main/resources/templates/profile/profiles.html
+++ b/web/src/main/resources/templates/profile/profiles.html
@@ -4,6 +4,8 @@
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
 
+    <title th:text="#{profiles}"></title>
+
     <link
             href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css"
             rel="stylesheet"
@@ -11,7 +13,6 @@
             crossorigin="anonymous"
     />
     <link th:href="@{/css/profiles.css}" rel="stylesheet"/>
-    <!--    <link th:href="@{/css/manageUtilitiesOfWorker.css}" rel="stylesheet"/>-->
     <link th:href="@{/css/main.css}" rel="stylesheet"/>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
@@ -26,26 +27,14 @@
              onclick="goBack()">
     </div>
     <div class="d-flex flex-column col-11">
-        <p class="org_name text-center p-2">Профили</p>
-    </div>
-</div>
-
-<div class="select-master option d-flex container-fluid col-6 px-0 my-3" th:if="${profiles.size() > 0}">
-    <div class="d-flex my-3 container">
-        <div class="col-1 my-auto mx-auto center-box">
-            <img th:src="@{/img/search.svg}" class="d-block mx-auto"
-                 width="40">
-        </div>
-        <div class="worker_info col-10">
-            <p class="text-center p-2">Поиск</p>
-        </div>
+        <p class="org_name text-center p-2" th:text="#{profiles}"></p>
     </div>
 </div>
 
 <div class="select-master option d-flex container-fluid col-6 px-0 my-3" th:unless="${profiles.size() > 0}">
     <div class="d-flex my-3 container">
         <div class="worker_info col-10">
-            <p class="text-center p-2">Нет созданных профилей</p>
+            <p class="text-center p-2" th:text="#{profile.no_created}"></p>
         </div>
     </div>
 </div>
@@ -78,14 +67,6 @@
                 <a class="page-link" th:text="${ i }"></a>
             </li>
         </th:block>
-        <!--        <th:block th:if="${ totalPages > 10 }">-->
-        <!--            <li th:id="'li' + ${totalPages}" class="page-item">-->
-        <!--                <a class="page-link">...</a>-->
-        <!--            </li>-->
-        <!--            <li th:id="'li' + ${totalPages}" class="page-item" th:onclick="switchPage([[${i}]])">-->
-        <!--                <a class="page-link" th:text="${ totalPages }"></a>-->
-        <!--            </li>-->
-        <!--        </th:block>-->
         <li id="next" class="page-item" th:classappend="${page == totalPages} ? 'disabled' : ''"
             th:onclick="onNext()">
             <a class="page-link">Next</a>
