--- a/web/src/main/resources/templates/select-time/selectWorkerToAssignSchedule.html
+++ b/web/src/main/resources/templates/select-time/selectWorkerToAssignSchedule.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
 
-    <title th:text="${org.name + ': специалисты'}"></title>
+    <title th:text="|${org.name}: #{masters}|"></title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css"
           rel="stylesheet"
           integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x"
@@ -25,7 +25,7 @@
              onclick="goBack()">
     </div>
     <div class="d-flex flex-column col-11">
-        <p class="text-center p-2">Выбери Специалиста</p>
+        <p class="text-center p-2" th:text="#{masters}"></p>
     </div>
 </div>
 
@@ -38,7 +38,7 @@
                      width="40">
             </div>
             <div class="worker_info col-10">
-                <p class="master_name" th:text="${worker.firstName + ' ' + worker.lastName}">Static content</p>
+                <p class="master_name" th:text="${worker.firstName + ' ' + worker.lastName}"></p>
             </div>
         </div>
     </div>
