--- a/web/src/main/resources/templates/worker/manageUtilitiesOfWorker.html
+++ b/web/src/main/resources/templates/worker/manageUtilitiesOfWorker.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
 
-    <title th:text="${orgName + ': обновить работника'}"></title>
+    <title th:text="|${orgName}: #{master.change}|"></title>
     <link
             href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css"
             rel="stylesheet"
@@ -27,7 +27,7 @@
              onclick="goBack()">
     </div>
     <div class="d-flex flex-column col-11">
-        <p class="text-center p-2" th:text="'Назначить услуги: ' + ${worker.firstName} + ' ' + ${worker.lastName}"></p>
+        <p class="text-center p-2" th:text="|#{master.assign_services}: ${worker.firstName} ${worker.lastName}|"></p>
     </div>
 
 
@@ -39,8 +39,8 @@
             <p th:text="${utility.description}"></p>
             <p th:text="${utility.price}"></p>
         </div>
-        <button th:id="'append' + ${utility.id}"  type="button" class="btn btn-primary" style="display: none" th:onclick="appendUtility([[${utility.id}]])">Добавить</button>
-        <button th:id="'remove' + ${utility.id}" type="button" class="btn btn-danger" th:onclick="removeUtility([[${utility.id}]])">Удалить</button>
+        <button th:id="'append' + ${utility.id}"  type="button" class="btn btn-primary" style="display: none" th:onclick="appendUtility([[${utility.id}]])" th:text="#{service.append}"></button>
+        <button th:id="'remove' + ${utility.id}" type="button" class="btn btn-danger" th:onclick="removeUtility([[${utility.id}]])" th:text="#{service.remove}"></button>
     </div>
 </th:block>
 
@@ -50,8 +50,8 @@
             <p th:text="${utility.description}"></p>
             <p th:text="${utility.price}"></p>
         </div>
-        <button th:id="'append' + ${utility.id}" type="button" class="btn btn-primary" th:onclick="appendUtility([[${utility.id}]])">Добавить</button>
-        <button th:id="'remove' + ${utility.id}" type="button" class="btn btn-danger" style="display: none" th:onclick="removeUtility([[${utility.id}]])">Удалить</button>
+        <button th:id="'append' + ${utility.id}" type="button" class="btn btn-primary" th:onclick="appendUtility([[${utility.id}]])" th:text="#{service.append}"></button>
+        <button th:id="'remove' + ${utility.id}" type="button" class="btn btn-danger" style="display: none" th:onclick="removeUtility([[${utility.id}]])" th:text="#{service.remove}"></button>
     </div>
 </th:block>
 
