assignSchedule.html refactored

--- a/web/src/main/resources/templates/select-time/assignSchedule.html
+++ b/web/src/main/resources/templates/select-time/assignSchedule.html
@@ -101,7 +101,7 @@
 
 <!--Delete Records-->
 
-<div class="option d-flex container-fluid col-3 px-0 my-3 justify-content-center">
+<div id="cancelRecords" class="option d-flex container-fluid col-3 px-0 my-3 justify-content-center">
     <p th:text="#{record.cancel}"></p>
 </div>
 
