--- a/web/src/main/resources/templates/fragment/user/organisation.html
+++ b/web/src/main/resources/templates/fragment/user/organisation.html
@@ -6,13 +6,13 @@
             class="d-flex container col-6 justify-content-center navbar sticky-top fixed-top"
             style="background-color: rgb(255, 255, 255)"
     >
-        <div class="col-10 d-flex flex-column">
+        <div class="col-11 d-flex flex-column">
             <p class="org_name text-center p-2" th:text="${org.name}"></p>
             <p class="org_description p-2" th:text="${org.description}"></p>
             <p class="org_address text-center p-2" th:text="${org.address}"></p>
         </div>
-        <img th:src="@{/img/person.svg}" class="d-block mx-auto"
-             width="35">
+            <img th:src="@{/img/person.svg}" class="d-block mx-auto profile-link"
+                 width="35">
     </div>
 
     <div id="suspended" class="container-fluid mt-3 p-2 h-auto align-middle col-6 d-flex" th:unless="${org.isActive}">
@@ -23,17 +23,15 @@
         </div>
     </div>
 
-    <div class="modal fade" id="modal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true" th:unless="${org.isActive}">
+    <div class="modal fade" id="modal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true"
+         th:unless="${org.isActive}">
         <div class="modal-dialog">
             <div class="modal-content">
                 <div class="modal-header">
                     <h5 class="modal-title" id="exampleModalLabel" th:text="#{organisation.suspended.title}"></h5>
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Закрыть"></button>
                 </div>
-<!--                TODO implement correctly-->
                 <div class="modal-body" th:text="#{organisation.suspended.body}">
-                    Организация может быть приостановлена по разным причинам. Например: производится ремонт в помещении или несоответствие правилам платформы.
-                    Пока организация приостановлена, вы не сможете записаться на услугу, а созданные услуги будут отменены.
                 </div>
             </div>
         </div>
