--- a/web/src/main/resources/templates/organisation/organisation.html
+++ b/web/src/main/resources/templates/organisation/organisation.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<html lang="en" xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 <head>
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
@@ -16,9 +16,11 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
 </head>
 <body class="container">
-<th:block th:insert="~{fragment/user/organisation :: body}"></th:block>
-<!--<th:block th:insert="~{fragment/redactor/organisation :: body}"></th:block>-->
-<!--<th:block th:insert="~{fragment/admin/organisation :: body}"></th:block>-->
+
+<th:block sec:authorize="hasAuthority('USER') or isAnonymous()" th:insert="~{fragment/user/organisation :: body}"></th:block>
+<th:block sec:authorize="hasAuthority('REDACTOR')" th:insert="~{fragment/redactor/organisation :: body}"></th:block>
+<th:block sec:authorize="hasAuthority('ADMIN')" th:insert="~{fragment/admin/organisation :: body}"></th:block>
+
 
 <script type="text/javascript" th:src="@{/js/organisation/organisation.js}"></script>
 <script type="text/javascript" th:src="@{/js/main.js}"></script>
