Validation to login and registration pages added

--- a/web/src/main/resources/static/css/login.css
+++ b/web/src/main/resources/static/css/login.css
@@ -13,3 +13,12 @@
         height: 100%;
     }
 }
+
+
+.incorrect {
+    font-size: small;
+    font-weight: revert;
+    color: red;
+    font-style: italic;
+    display: none;
+}
