--- a/web/src/main/resources/static/css/registration.css
+++ b/web/src/main/resources/static/css/registration.css
@@ -15,13 +15,13 @@
 
 .gradient-custom-2 {
     /* fallback for old browsers */
-    background: #a1c4fd;
+    background: rgb(247, 247, 247);
 
     /* Chrome 10-25, Safari 5.1-6 */
-    background: -webkit-linear-gradient(to right, rgba(161, 196, 253, 1), rgba(194, 233, 251, 1));
+    background: -webkit-linear-gradient(to right,  rgb(247, 247, 247),  rgb(247, 247, 247));
 
     /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-    background: linear-gradient(to right, rgba(161, 196, 253, 1), rgba(194, 233, 251, 1))
+    background: linear-gradient(to right,  rgb(247, 247, 247),  rgb(247, 247, 247))
 }
 
 .bg-indigo {
@@ -38,4 +38,20 @@
         border-bottom-left-radius: 15px;
         border-bottom-right-radius: 15px;
     }
+}
+
+
+.incorrect {
+    font-size: small;
+    font-weight: revert;
+    color: red;
+    font-style: italic;
+    display: none;
+}
+.incorrect1 {
+    font-size: small;
+    font-weight: revert;
+    color: powderblue;
+    font-style: italic;
+    display: none;
 }
