--- a/web/src/main/resources/templates/security/login.html
+++ b/web/src/main/resources/templates/security/login.html
@@ -24,23 +24,25 @@
             <div class="col-md-8 col-lg-6 col-xl-4 offset-xl-1">
                 <form>
                     <div class="form-outline mb-4">
+                        <p id="incorrect-login" class='my-0 incorrect' th:text="#{log.incorrect-login}"></p>
                         <input type="email" id="login-input" class="form-control form-control-lg"
-                               placeholder="Enter your login"/>
-                        <label class="form-label" for="login-input">Login</label>
+                               th:placeholder="#{log.enter-log}" />
+                        <label class="form-label" for="login-input" th:text="#{log.login}"></label>
                     </div>
 
                     <!-- Password input -->
                     <div class="form-outline mb-3">
+                        <p id="incorrect-password" class='my-0 incorrect' th:text="#{log.incorrect-password}"></p>
                         <input type="password" id="password-input" class="form-control form-control-lg"
-                               placeholder="Enter password"/>
-                        <label class="form-label" for="password-input">Password</label>
+                               th:placeholder="#{log.enter-password}"/>
+                        <label class="form-label" for="password-input" th:text="#{log.password}"></label>
                     </div>
 
                     <div class="text-center text-lg-start mt-4 pt-2">
                         <button id="login-btn" type="button" class="btn btn-primary btn-lg"
-                                style="padding-left: 2.5rem; padding-right: 2.5rem;">Login
+                                style="padding-left: 2.5rem; padding-right: 2.5rem;" th:text="#{log.doLogin}">Login
                         </button>
-                        <p class="small fw-bold mt-2 pt-1 mb-0">Don't have an account? <a id="register-link" class="link-danger">Register</a>
+                        <p class="small fw-bold mt-2 pt-1 mb-0"><span th:text="#{log.dontHaveAcc}" th:remove="tag"></span> <a id="register-link" class="link-danger" th:text="#{log.doRegister}"></a>
                         </p>
                     </div>
 
@@ -51,32 +53,27 @@
     <div
             class="d-flex flex-column flex-md-row text-center text-md-start justify-content-between py-4 px-4 px-xl-5 bg-primary">
         <!-- Copyright -->
-        <div class="text-white mb-3 mb-md-0">
-            Copyright © 2020. All rights reserved.
+        <div class="text-white mb-3 mb-md-0" th:text="#{log.copyright}">
         </div>
         <!-- Copyright -->
 
         <!-- Right -->
         <div>
-            <a href="#!" class="text-white me-4">
+            <a class="text-white me-4">
                 <img th:src="@{/img/facebook.svg}" class="img-fluid"
-                     width="24"
-                     onclick="goBack()">
+                     width="24">
             </a>
-            <a href="#!" class="text-white me-4">
+            <a class="text-white me-4">
                 <img th:src="@{/img/twitter.svg}" class="img-fluid"
-                     width="24"
-                     onclick="goBack()">
+                     width="24">
             </a>
-            <a href="#!" class="text-white me-4">
+            <a class="text-white me-4">
                 <img th:src="@{/img/google.svg}" class="img-fluid"
-                     width="24"
-                     onclick="goBack()">
+                     width="24">
             </a>
-            <a href="#!" class="text-white">
+            <a class="text-white">
                 <img th:src="@{/img/linkedin.svg}" class="img-fluid"
-                     width="24"
-                     onclick="goBack()">
+                     width="24">
             </a>
         </div>
         <!-- Right -->
