--- a/web/src/main/resources/templates/security/registration.html
+++ b/web/src/main/resources/templates/security/registration.html
@@ -12,7 +12,7 @@
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
 </head>
-<body class="container">
+<body class="container" style="background-color: rgb(247, 247, 247)">
 
 <section class="h-100 h-custom gradient-custom-2">
     <div class="container py-5 h-100">
@@ -23,22 +23,29 @@
                         <div class="row g-0">
                             <div class="col-lg-6">
                                 <div class="p-5">
-                                    <h3 class="fw-normal mb-5" style="color: #4835d4;">General Information</h3>
+                                    <h3 class="fw-normal mb-5" style="color: #4835d4;"
+                                        th:text="#{reg.general_info}"></h3>
 
                                     <div class="row">
                                         <div class="col-md-6 mb-4 pb-2">
 
                                             <div class="form-outline">
-                                                <input type="text" id="form3Examplev2" class="form-control form-control-lg" />
-                                                <label class="form-label" for="form3Examplev2">First name</label>
+                                                <input id="firstName" type="text" class="form-control form-control-lg"/>
+                                                <p id="incorrect-firstName" class='my-0 incorrect'
+                                                   th:text="#{reg.incorrect-firstName}"></p>
+                                                <label class="form-label" for="firstName"
+                                                       th:text="#{reg.firstName}"></label>
                                             </div>
 
                                         </div>
                                         <div class="col-md-6 mb-4 pb-2">
 
                                             <div class="form-outline">
-                                                <input type="text" id="form3Examplev3" class="form-control form-control-lg" />
-                                                <label class="form-label" for="form3Examplev3">Last name</label>
+                                                <input id="lastName" type="text" class="form-control form-control-lg"/>
+                                                <p id="incorrect-lastName" class='my-0 incorrect'
+                                                   th:text="#{reg.incorrect-lastName}"></p>
+                                                <label class="form-label" for="lastName"
+                                                       th:text="#{reg.lastName}"></label>
                                             </div>
 
                                         </div>
@@ -46,8 +53,10 @@
 
                                     <div class="mb-4 pb-2">
                                         <div class="form-outline">
-                                            <input type="text" id="form3Examplev4" class="form-control form-control-lg" />
-                                            <label class="form-label" for="form3Examplev4">Login</label>
+                                            <input id="login" type="text" class="form-control form-control-lg"/>
+                                            <p id="incorrect-login" class='my-0 incorrect'
+                                               th:text="#{reg.incorrect-login}"></p>
+                                            <label class="form-label" for="login" th:text="#{reg.login}"></label>
                                         </div>
                                     </div>
 
@@ -55,8 +64,11 @@
                                         <div class=" mb-4 pb-2 mb-md-0 pb-md-0">
 
                                             <div class="form-outline">
-                                                <input type="text" id="form3Examplev5" class="form-control form-control-lg" />
-                                                <label class="form-label" for="form3Examplev5">Password</label>
+                                                <input type="text" id="password" class="form-control form-control-lg"/>
+                                                <p id="incorrect-password" class='my-0 incorrect'
+                                                   th:text="#{reg.incorrect-password}"></p>
+                                                <label class="form-label" for="password"
+                                                       th:text="#{reg.password}"></label>
                                             </div>
 
                                         </div>
@@ -66,32 +78,39 @@
                             </div>
                             <div class="col-lg-6 bg-indigo text-white">
                                 <div class="p-5">
-                                    <h3 class="fw-normal mb-5">Contact Details</h3>
+                                    <h3 class="fw-normal mb-5" th:text="#{reg.contact_details}"></h3>
 
                                     <div class="mb-4 pb-2">
                                         <div class="form-outline form-white">
-                                            <input type="text" id="form3Examplea2" class="form-control form-control-lg" />
-                                            <label class="form-label" for="form3Examplea2">Email</label>
+                                            <input type="text" id="email" class="form-control form-control-lg"/>
+                                            <p id="incorrect-email" class='my-0 incorrect1'
+                                               th:text="#{reg.incorrect-email}"></p>
+                                            <label class="form-label" for="email" th:text="#{reg.email}"></label>
                                         </div>
                                     </div>
 
                                     <div class="mb-4 pb-2">
                                         <div class="form-outline form-white">
-                                            <input type="text" id="form3Examplea3" class="form-control form-control-lg" />
-                                            <label class="form-label" for="form3Examplea3">Phone Number</label>
+                                            <input type="text" id="phoneNumber" class="form-control form-control-lg"/>
+                                            <p id="incorrect-phoneNumber" class='my-0 incorrect1'
+                                               th:text="#{reg.incorrect-phoneNumber}"></p>
+                                            <label class="form-label" for="phoneNumber"
+                                                   th:text="#{reg.phoneNumber}"></label>
                                         </div>
                                     </div>
 
                                     <div class="form-check d-flex justify-content-start mb-4 pb-3">
-                                        <input class="form-check-input me-3" type="checkbox" value="" id="form2Example3c" />
-                                        <label class="form-check-label text-white" for="form2Example3">
-                                            I do accept the <a href="#!" class="text-white"><u>Terms and Conditions</u></a> of your
-                                            site.
+                                        <input id="agreedOnTerms" class="form-check-input me-3" type="checkbox"
+                                               value=""/>
+                                        <label class="form-check-label text-white" for="agreedOnTerms" th:inline="text">
+                                            <span th:text="#{reg.iaccept.outer.f}" th:remove="tag"></span><a href="#!"
+                                                                                                             class="text-white"><u
+                                                th:text="#{reg.iaccept.inner}"></u></a>.
                                         </label>
                                     </div>
 
-                                    <button type="button" class="btn btn-light btn-lg"
-                                            data-mdb-ripple-color="dark">Register</button>
+                                    <button id="register" type="button" class="btn disabled btn-light btn-lg"
+                                            data-mdb-ripple-color="dark" th:text="#{reg.register}"></button>
 
                                 </div>
                             </div>
@@ -103,8 +122,7 @@
     </div>
 </section>
 
-<script type="text/javascript" th:src="@{/js/utility/utilities.js}"></script>
-<script type="text/javascript" th:src="@{/js/main.js}"></script>
+<script type="text/javascript" th:src="@{/js/security/registration.js}"></script>
 
 <script
         src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"
